--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -31,6 +31,9 @@ jobs:
         mkdir -p database
         touch database/database.sqlite
     - name: Migrate database
+      env:
+        DB_CONNECTION: sqlite
+        DB_DATABASE: database/database.sqlite
       run: php artisan migrate:fresh --seeder=DatabaseSeeder
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
