--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,13 +15,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4  # Checkout code from your repository
       - name: Build and Up Services
-        uses: hoverkraft-tech/compose-action@v2  # Use the compose action
+        uses: actions/checkout@v2  # Use the compose action
         with:
           compose-file: ./docker-compose.yml  # Path to your docker-compose.yml file
           up-flags: "-d"  # Run services in detached mode (optional)
 
       - name: Run test
-        uses: hoverkraft-tech/compose-action@v2  # Use the compose action again
+        uses: actions/checkout@v2  # Use the compose action again
         with:
           compose-file: ./docker-compose.yml  # Path to your docker-compose.yml file
           service: fighton-web  # Specify the service to run commands in
