--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Configure Database Connection
         env:
           DB_CONNECTION: mysql
-          DB_HOST: fighton-mysql_db-1
+          DB_HOST: 127.0.0.1
           DB_DATABASE: fighton  # Matches the service name
           DB_USERNAME: root
           DB_PASSWORD: root  # Access secret password
