--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,52 +1,38 @@
-name: Laravel CI/CD
+name: Build Image with MySQL
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  testing:
+  build:
     runs-on: ubuntu-latest
 
     services:
       mysql:
-        image: mysql:8.0  # Adjust MySQL version if needed
+        image: mysql:8.0  # Adjust the version as needed
         env:
-          MYSQL_ROOT_PASSWORD: root  # Replace with a secure password
-          MYSQL_DATABASE: fighton  # Customize database name
+          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+        ports:
+          - 3306:3306
+        options:
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'  # Adjust PHP version based on your Laravel requirements
+      - name: Build the image (with context)
+        run: |
+          docker build \
+            -t your-image-name \
+            --build-arg MYSQL_HOST=mysql \
+            --build-arg MYSQL_PORT=3306 \
+            .  # Replace with your actual image name
 
-      - name: Copy .env file
-        run: cp .env.example .env
-
-      - name: Install dependencies
-        run: composer install --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-
-      - name: Generate Application Key
-        run: php artisan key:generate
-
-      - name: Grant storage permissions
-        run: chmod -R 777 storage bootstrap/cache
-
-      - name: Configure Database Connection
-        env:
-          DB_CONNECTION: mysql
-          DB_HOST: 127.0.0.1
-          DB_DATABASE: fighton  # Matches the service name
-          DB_USERNAME: root
-          DB_PASSWORD: root  # Access secret password
-          DB_PORT: 3306
-        run: php artisan migrate:fresh --seeder=DatabaseSeeder
-
-      - name: Run Tests
-        run: php artisan test
-
+      - name: Test the image (optional)
+        run: |
+          docker run --rm your-image-name \
+            php artisan migrate:fresh  # Replace with your actual test command
