--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,67 +1,52 @@
-name: Laravel
-
+name: CI
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
-  laravel-tests:
+  tests:
     runs-on: ubuntu-latest
 
     services:
       mysql:
-        image: mysql:8.0  # Adjust the version as needed
+        image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD: root
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: test
         ports:
           - 3306:3306
-        options:
-          --health-cmd="mysqladmin ping"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 1
 
-      - name: Install PHP and Extensions
-        run: |
-          sudo apt update && sudo apt install -y \
-            php8.2 php8.2-cli php8.2-xml php8.2-mbstring php8.2-tokenizer php8.2-sqlite php8.2-curl php8.2-gd php8.2-mysql
+    - name: Cache composer dependencies
+      uses: actions/cache@v2
+      with:
+        path: vendor
+        key: composer-${{ hashFiles('**/composer.lock') }}
+        restore-keys: |
+          composer-
 
-      - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: Install PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: 8.2
 
-      - name: Update composer
-        run: composer update
+    - name: Install composer dependencies
+      run: |
+        composer install --no-scripts
 
-      - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Prepare Laravel Application
+      run: |
+        cp .env.ci .env
+        php artisan key:generate
 
-      - name: Generate key
-        run: php artisan key:generate
-
-      - name: Create Database
-        run: echo "CREATE DATABASE IF NOT EXISTS fighton;" | mysql -h mysql -u root -p root
-
-      - name: Migrate database
-        env:
-          DB_CONNECTION: mysql
-          DB_HOST: mysql
-          DB_PORT: 3306
-          DB_DATABASE: fighton
-          DB_USERNAME: root
-          DB_PASSWORD: root
-        run: php artisan migrate:fresh --seeder=DatabaseSeeder
-
-      - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-        env:
-          DB_CONNECTION: mysql
-          DB_HOST: mysql
-          DB_PORT: 3306
-          DB_DATABASE: fighton
-          DB_USERNAME: root
-          DB_PASSWORD: root
-        run: php artisan test
+    - name: Run Test suite
+      run: php artisan test
