--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -43,3 +43,6 @@ jobs:
 
     - name: Run Test suite
       run: php artisan test
+
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
